Added jwt